refactor: cleared majority of code smells